--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Media Converter - Convert YouTube videos and SoundCloud tracks to MP3/MP4"
+      content="AnyMP3 - Convert YouTube videos and SoundCloud tracks to MP3"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Media Converter</title>
+    <title>AnyMP3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
